<resources>
    <string name="app_name" translatable="false">MSL</string>
    <string name="ble_setting_FLSetting_message">테스트 중</string>
    <string name="ble_setting_FLSetting_title">FL Setting</string>
    <string name="ble_main_scanItem_scan">등명기 검색</string>
    <string name="ble_main_scanItem_stopScanning">중지</string>
    <string name="ble_main_title">MSL Technology</string>
    <string name="ble_main_checkPermission_GPS_fail_alertDialog_title">위치정보 권한 요청 거부</string>
    <string name="ble_main_checkPermission_GPS_fail_alertDialog_message">위치정보 권한 요청을 거절하셨습니다.\n블루투스 스캔
        이용이 제한됩니다.\n어플리케이션 정보에서 권한을 허용해주십시오.</string>
    <string name="ble_main_checkPermission_GPS_alertDialog_title">위치정보 권한 요청 </string>
    <string name="ble_main_checkPermission_GPS_alertDialog_message">GPS(위치정보)가 OFF 상태입니다.\n블루투스 스캔 이용이 제한됩니다.\n설정창으로 이동하시겠습니까?</string>
    <string name="ble_password_dialog_message">연결 중</string>
    <string name="dialog_setting_second">초</string>
    <string name="dialog_setting_FL">섬광</string>
    <string name="dialog_setting_search">검색</string>
    <string name="dialog_setting_cancel">취소</string>
    <string name="dialog_setting_confirm">확인</string>
    <string name="ID_setting">ID 설정</string>
    <string name="FL_setting">FL 설정</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_10" translatable="false">10</string>
    <string name="_12" translatable="false">12</string>
    <string name="_15" translatable="false">15</string>
    <string name="_16" translatable="false">16</string>
    <string name="_20" translatable="false">20</string>
    <string name="_25" translatable="false">25</string>
    <string name="_30" translatable="false">30</string>
    <string name="_0_5" translatable="false">0.5</string>
    <string name="_0_6" translatable="false">0.6</string>
    <string name="_0_75" translatable="false">0.75</string>
    <string name="_1_2" translatable="false">1.2</string>
    <string name="_1_25" translatable="false">1.25</string>
    <string name="_1_5" translatable="false">1.5</string>
    <string name="_2_5" translatable="false">2.5</string>
    <string name="_3_5" translatable="false">3.5</string>
    <string name="_4_3" translatable="false">4.3</string>
    <string name="_4_5" translatable="false">4.5</string>
    <string name="_5_5" translatable="false">5.5</string>
    <string name="_15_75" translatable="false">15.75</string>
    <string name="once_status">상태요청</string>
    <string name="lantern_On">강제점등</string>
    <string name="lantern_Off">강제소등</string>
    <string name="lantern_Fix">부동광</string>
    <string name="Reset">리셋</string>
    <string name="_0" translatable="false">0</string>
    <string name="toastMsg_bluetooth_Off">블루투스 기능이 꺼졌습니다. 확인 바랍니다.</string>
    <string name="ble_main_scanItem_refresh">새로고침</string>
    <string name="ble_main_scanItem_Disconnect">연결끊기</string>
    <string name="ID">ID</string>
    <string name="FL">등질</string>
    <string name="input_V">입력전압</string>
    <string name="output_A">출력전류</string>
    <string name="CDS">CDS</string>
    <string name="lantern_status">점소등 상태</string>
    <string name="solar_V">솔라 전압</string>
    <string name="output_V">출력 전압</string>
    <string name="receive_date">날짜</string>
    <string name="gps_latitude">위도</string>
    <string name="battery_v">배터리 전압</string>
    <string name="charge_discharge_A">충방전 전류</string>
    <string name="receive_time">시간</string>
    <string name="gps_longitude">경도</string>
    <string name="battery_percent">배터리 잔량</string>
    <string name="Number_No">No.</string>
    <string name="Second_Sec">초</string>
    <string name="division">구분</string>
    <string name="remarks">비고</string>
    <string name="Fixed">부동광</string>
    <string name="select">select</string>
    <string name="btnSelectID_Error1">값의 범위는 000 ~ 255 입니다.</string>
    <string name="GPS_On">항상 켜기</string>
    <string name="GPS_Off">밤에만 켜기</string>
    <string name="tv_ble_fragment_beginning_manual">Manual</string>
    <string name="notice_current_password">현재 비밀번호를 입력해주세요</string>
    <string name="notice_change_password">변경할 비밀번호를 입력해주세요.</string>
    <string name="notice_change_password_check">변경한 비밀번호를 다시한번 입력해주세요.</string>
    <string name="notice_passwordChange_fail">입력하신 비밀번호가 다릅니다.</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="cycle_status">자동요청</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="hour">시</string>
    <string name="min">분</string>
    <string name="sec">초</string>
    <string name="ble_status_cds_0">낮</string>
    <string name="ble_status_cds_1">밤</string>
    <string name="ble_status_lantern_status_0">소등</string>
    <string name="ble_status_lantern_status_1">점등</string>
    <string name="battery_v_detail">베터리\n자세히</string>
    <string name="solar_v_detail">솔라\n자세히</string>
    <string name="GPS_Set" translatable="false">GPS</string>
    <string name="btn_ble_setting_change_password">비밀번호 변경</string>
    <string name="tv_ble_fragment_status_dialog_battery_bat1" translatable="false">Bat1</string>
    <string name="tv_ble_fragment_status_dialog_battery_bat2" translatable="false">Bat2</string>
    <string name="tv_ble_fragment_status_dialog_battery_bat3" translatable="false">Bat3</string>
    <string name="tv_ble_fragment_status_dialog_battery_bat4" translatable="false">Bat4</string>
    <string name="tv_ble_fragment_status_dialog_battery_bat5" translatable="false">Bat5</string>
    <string name="tv_ble_fragment_status_dialog_battery_bat6" translatable="false">Bat6</string>
    <string name="tv_ble_fragment_status_dialog_solar_sol1" translatable="false">Sol1</string>
    <string name="tv_ble_fragment_status_dialog_solar_sol2" translatable="false">Sol2</string>
    <string name="tv_ble_fragment_status_dialog_solar_sol3" translatable="false">Sol3</string>
    <string name="tv_ble_fragment_status_dialog_solar_sol4" translatable="false">Sol4</string>
    <string name="tv_ble_fragment_status_dialog_solar_sol5" translatable="false">Sol5</string>
    <string name="tv_ble_fragment_status_dialog_solar_sol6" translatable="false">Sol6</string>
    <string name="devices" translatable="false">USB Devices</string>
    <string name="change">변경</string>
    <string name="lantern_id">lantern ID</string>
    <string name="RTU_ID">RTU ID</string>
    <string name="send_cycle" >전송 주기</string>
    <string name="reset_cycle">리셋 주기</string>
    <string name="server_1">Server 1</string>
    <string name="server_2">Server 2</string>
    <string name="dialog_clear">지우기</string>
    <string name="protocol" translatable="false">Protocol</string>
    <string name="GMT">시간 설정\n(GMT)</string>
    <string name="Modem_power">모뎀 전원</string>
    <string name="rtu_status">상태조회</string>
    <string name="rtu_reset">모뎀리셋</string>
    <string name="rtu_send">모국전송</string>
    <string name="next" >다음</string>
    <string name="skip" >스킵</string>
    <string name="start">확인</string>


    <string name="slide_1_title" translatable="false">Hello Food!</string>
    <string name="slide_1_desc" translatable="false">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title" translatable="false">Movie Tickets</string>
    <string name="slide_2_desc" translatable="false">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title" translatable="false">Great Discounts</string>
    <string name="slide_3_desc" translatable="false">Best discounts on every single service we offer!</string>

    <string name="slide_4_title" translatable="false">World Travel</string>
    <string name="slide_4_desc" translatable="false">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc" translatable="false">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again" translatable="false">Play Again</string>
    <string name="RTU_protocol_standard">표준형</string>
    <string name="RTU_protocol_private">일체형</string>
    <string name="Delay_Time">지연 시간</string>
    <string name="Hardware_Version">Version</string>
    <string name="information_status">설정정보</string>
    <string name="Lantern">등명기</string>
    <string name="RTU">RTU</string>
    <string name="log_close">Log Close</string>
    <string name="TCP">TCP</string>
    <string name="call">조회</string>
    <string name="Modem_Num">모뎀 전화번호</string>
    <string name="Lantern_Info">등명기 정보</string>
    <string name="Delay_Time_value">+0.00 초</string>
    <string name="latern_status">등명기 조회</string>
    <string name="v_status">전압 요청</string>
    <string name="a_status">전류 요청</string>
    <string name="Network">Network</string>
    <string name="Socket">Socket</string>
    <string name="tv_ble_fragment_password_passwordInsert">비밀번호를 입력해 주세요.</string>
    <string name="ble_scan_status_scanning">검색중…</string>
    <string name="ble_scan_status_pause">검색 완료</string>
    <string name="temperature">온도</string>
    <string name="Language" translatable="false">Language(언어)</string>
    <string name="Delay_Time_change">시간 변경</string>
    <string name="bleDisconnect_problem">Connection terminated due to a problem between Bluetooth communication</string>
    <string name="bleDisconnect_Connection_Failed">Connection failed</string>
    <string name="ble_Beginning_tvScan">등명기 모니터링</string>
    <string name="ble_Beginning_tvRTU">RTU 설정(유선)</string>
    <string name="toastMsg_changedToZero">changed to 0</string>
    <string name="toastMsg_changedToNine">changed to 9</string>
    <string name="toastMsg_fill3Places">Please fill in 3 places</string>
    <string name="toastMsg_commandSend">Command has been sent</string>
    <string name="toastMsg_max255">The maximum is 255</string>
    <string name="toastMsg_fill7Places">Please fill in 7 places</string>
    <string name="toastMsg_max720">The maximum is 720</string>
    <string name="toastMsg_dialog_serverChange_confirm">Please fill in all the port numbers</string>
    <string name="toastMsg_max255_IP">Each IP has a maximum of 255</string>
    <string name="toastMsg_max65535_port">The maximum port value is 65535</string>
    <string name="mode_remoteControl">리모콘</string>
    <string name="controlMode">제어모드</string>
    <string name="mode_switch">내부 스위치</string>
    <string name="modeSelect">모드 선택</string>
    <string name="Lowpower">저전력 모드</string>
    <string name="permissioncheck_no_FINE_LOCATION">위치 권한이 없습니다. 블루투스 스캔이 불가능합니다.</string>
    <string name="permissioncheck_no_BLUETOOTH_SCAN">블루투스 근처 기기 권한이 없습니다. 블루투스 스캔이 불가능 합니다.</string>
    <string name="ble_main_checkGPSManager_alertDialog_title">위치 정보 활성화</string>
    <string name="ble_main_checkGPSManager_alertDialog_message">위치정보가 꺼져있습니다. 위치정보 설정창으로 이동하시겠습니까?</string>


</resources>