<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <View style="@style/view_vertical_line_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_ble_fragment_setting"
                    android:text="@string/ID" />


                <View style="@style/view_horizontal_line_5" />

                <TextView
                    android:id="@+id/tv_ble_fragment_setting_selected_ID"
                    style="@style/tv_ble_fragment_setting_value"
                    android:text="" />

                <Button
                    android:id="@+id/btn_ID_Setting"
                    style="@style/btn_ble_fragment_setting_setting"
                    android:text="@string/ID_setting" />

            </LinearLayout>

            <View style="@style/view_vertical_line_5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    style="@style/tv_ble_fragment_setting"
                    android:text="@string/FL" />


                <View style="@style/view_horizontal_line_5" />

                <TextView
                    android:id="@+id/tv_ble_fragment_setting_selected_FL"
                    style="@style/tv_ble_fragment_setting_value"
                    android:text="" />

                <Button
                    android:id="@+id/btn_FL_Setting"
                    style="@style/btn_ble_fragment_setting_setting"
                    android:text="@string/FL_setting" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_status"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_ble_status_call_btn"
                android:text="@string/once_status"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_information"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_ble_status_call_btn"
                android:text="@string/information_status"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <View style="@style/view_vertical_line_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_GPS_On"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_ble_setting_gps_on"
            android:gravity="center"
            android:text="@string/GPS_On"
            android:textStyle="bold" />

        <TextView
            style="@style/tv_ble_fragment_setting"
            android:text="@string/GPS_Set" />


        <Button
            android:id="@+id/btn_GPS_Off"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_ble_setting_gps_off"
            android:gravity="center"
            android:text="@string/GPS_Off"
            android:textStyle="bold" />

    </LinearLayout>

    <View style="@style/view_vertical_line_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            style="@style/tv_ble_fragment_setting"
            android:text="@string/Delay_Time" />

        <View style="@style/view_horizontal_line_5" />

        <TextView
            android:id="@+id/tv_ble_fragment_setting_delay_time"
            style="@style/tv_ble_fragment_setting" />

        <Button
            android:id="@+id/btn_Delay_Time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_ble_setting_gps_off"
            android:gravity="center"
            android:text="@string/change"
            android:textStyle="bold" />

    </LinearLayout>

    <View style="@style/view_vertical_line_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">


    </LinearLayout>

    <View style="@style/view_vertical_line_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            style="@style/tv_ble_fragment_setting"
            android:text="@string/Hardware_Version" />

        <View style="@style/view_horizontal_line_5" />

        <TextView
            android:id="@+id/tv_ble_fragment_setting_version_num"
            style="@style/tv_ble_fragment_setting" />

        <View style="@style/view_horizontal_line_5" />

        <TextView
            android:id="@+id/tv_ble_fragment_setting_version_rtu"
            style="@style/tv_ble_fragment_setting" />

        <View style="@style/view_horizontal_line_5" />

        <TextView
            android:id="@+id/tv_ble_fragment_setting_version_gps_speed"
            style="@style/tv_ble_fragment_setting" />

    </LinearLayout>

    <View style="@style/view_vertical_line_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/tv_ble_fragment_setting"
            android:text="@string/change_password" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="15dp"
            android:background="@color/ble_view_line_color" />

        <Button
            android:id="@+id/btn_Password_Change"
            style="@style/btn_ble_fragment_setting_setting"
            android:layout_margin="20dp"
            android:text="@string/btn_ble_setting_change_password" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <View style="@style/view_vertical_line_5" />

</LinearLayout>